[tool.poetry]
name = "marker-api-client"
version = "0.0.1"
description = ""
authors = ["adithya-s-k <adithyaskolavi@gmail.com>"]
readme = "README.md"
packages = [{include = "marker_api_client"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
requests = "^2.32.3"
tqdm = "^4.66.5"
aiohttp = "^3.10.10"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
